fix: disabled pointer-events removed

--- a/components/Button/Button.stories.mdx
+++ b/components/Button/Button.stories.mdx
@@ -42,7 +42,7 @@ This is a button component
         <custom-button
             variant="primary"
             disabled>
-            Primary
+            Primary Disabled
         </custom-button>
       `}
     </Story>
@@ -54,11 +54,11 @@ This is a button component
       {html`
         <custom-button
             variant="ghost">
-            Primary
+            Ghost
         </custom-button>
         <custom-button
             variant="ghost" disabled>
-            Primary
+            Ghost Disabled
         </custom-button>
       `}
     </Story>
@@ -71,12 +71,12 @@ This is a button component
         <custom-button
             variant="primary"
             disabled>
-            Primary
+            Primary Disabled
         </custom-button>
         <custom-button
             variant="ghost"
             disabled>
-            Primary
+            Ghost Disabled
         </custom-button>
       `}
     </Story>
